--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ packaging==25.0
 pillow==10.4.0
 psycopg==3.2.9
 psycopg-binary==3.2.9
+python-dotenv==1.1.1
 requests==2.32.4
 six==1.17.0
 sqlparse==0.5.1
